--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typecheck": "tsc -b"
   },
   "dependencies": {
+    "@code-hike/mdx": "^0.5.2-next.3",
     "@octokit/plugin-throttling": "^3.5.2",
     "@octokit/rest": "^18.12.0",
     "@prisma/client": "^3.9.2",
@@ -40,10 +41,11 @@
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "date-fns": "^2.28.0",
+    "esbuild": "^0.14.39",
     "express": "^4.17.3",
     "highlight.js": "^11.4.0",
     "lru-cache": "^6.0.0",
-    "mdx-bundler": "^8.0.1",
+    "mdx-bundler": "^9.0.1",
     "morgan": "^1.10.0",
     "p-queue": "^7.2.0",
     "react": "^17.0.2",
