--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -192,6 +192,7 @@ jobs:
           build-args: |
             COMMIT_SHA=${{ github.sha }}
             GITHUB_REPOSITORY=${{ github.repository }}
+            GH_ACCESS_TOKEN=${{ secrets.GITHUB_TOKEN }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
 
