--- a/package.json
+++ b/package.json
@@ -28,39 +28,41 @@
     "typecheck": "tsc -b"
   },
   "dependencies": {
-    "@code-hike/mdx": "^0.5.2-next.3",
+    "@code-hike/mdx": "^0.8.0",
     "@octokit/plugin-throttling": "^3.5.2",
     "@octokit/rest": "^18.12.0",
     "@prisma/client": "^3.9.2",
     "@reach/skip-nav": "^0.16.0",
-    "@remix-run/express": "^1.3.4",
-    "@remix-run/node": "^1.3.4",
-    "@remix-run/react": "^1.3.4",
-    "@remix-run/server-runtime": "^1.3.4",
+    "@remix-run/express": "^1.8.0",
+    "@remix-run/node": "^1.8.0",
+    "@remix-run/react": "^1.8.0",
+    "@remix-run/server-runtime": "^1.8.0",
     "clsx": "^1.1.1",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "date-fns": "^2.28.0",
-    "esbuild": "^0.14.39",
+    "esbuild": "^0.17.3",
     "express": "^4.17.3",
     "highlight.js": "^11.4.0",
     "lru-cache": "^6.0.0",
-    "mdx-bundler": "^9.0.1",
+    "mdx-bundler": "^9.2.1",
     "morgan": "^1.10.0",
     "p-queue": "^7.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rehype-highlight": "^5.0.2",
+    "rehype-highlight": "^6.0.0",
     "remark-autolink-headings": "^7.0.1",
     "remark-gfm": "^3.0.1",
     "remark-slug": "^7.0.1",
     "remix-seo": "^0.1.0",
+    "remix-typedjson": "^0.1.7",
     "shiki": "^0.10.1",
-    "tiny-invariant": "^1.2.0"
+    "tiny-invariant": "^1.2.0",
+    "unist-util-visit": "^4.1.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.3.4",
-    "@remix-run/eslint-config": "^1.3.4",
+    "@remix-run/dev": "^1.8.0",
+    "@remix-run/eslint-config": "^1.8.0",
     "@tailwindcss/typography": "^0.5.1",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.2",
