--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
     },
     "skipLibCheck": true,
     "allowJs": true,
-
-    // Remix takes care of building everything in `remix build`.
-    "noEmit": true
+    "noEmit": true,
+    "forceConsistentCasingInFileNames": true
   }
 }
