--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.17.3",
     "highlight.js": "^11.4.0",
     "lru-cache": "^6.0.0",
+    "lucide-react": "^0.109.0",
     "mdx-bundler": "^9.2.1",
     "morgan": "^1.10.0",
     "p-queue": "^7.2.0",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.8.0",
     "@remix-run/eslint-config": "^1.8.0",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.1",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.2",
@@ -100,6 +102,8 @@
     "prettier-plugin-tailwindcss": "^0.1.7",
     "prisma": "^3.9.2",
     "start-server-and-test": "^1.14.0",
+    "tailwind-clip-path": "^1.0.0",
+    "tailwind-merge": "^1.9.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3",
     "vite": "^2.9.0",
